--- a/css/style.css
+++ b/css/style.css
@@ -5,26 +5,26 @@
 */
 
 /* 1. Base e Globais */
-@import url("base/_reset.css");
-@import url("base/_variables.css");
-@import url("base/_base.css");
+@import url("base/reset.css");
+@import url("base/variables.css");
+@import url("base/base.css");
 
 /* 2. Layout */
-@import url("layout/_background.css");
+@import url("layout/background.css");
 
 /* 3. Componentes */
-@import url("components/_card.css");
-@import url("components/_sidebar.css");
-@import url("components/_main-content.css");
-@import url("components/_tabs.css");
-@import url("components/_social-icons.css");
-@import url("components/_lists.css");
+@import url("components/card.css");
+@import url("components/sidebar.css");
+@import url("components/main-content.css");
+@import url("components/tabs.css");
+@import url("components/social-icons.css");
+@import url("components/lists.css");
 
 /* 4. Páginas Específicas */
-@import url("pages/_404.css"); /* <-- LINHA RESTAURADA */
+@import url("pages/404.css"); /* <-- LINHA RESTAURADA */
 
 /* 5. Utilitários */
-@import url("utilities/_animations.css");
+@import url("utilities/animations.css");
 
 /* 6. Responsividade (Carregado por último) */
 @import url("responsive.css");
